@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/python
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.471 2010/05/25 17:09:38 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.472 2010/05/26 16:18:24 hwoarang Exp $
+
+  26 May 2010; Markos Chandras <hwoarang@gentoo.org> python-3.1.2-r3.ebuild:
+  Stable on amd64 wrt bug #320043
 
   25 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   python-2.4.6.ebuild, python-2.5.4-r4.ebuild, python-2.6.4-r1.ebuild,
